2007-08-19  Badlop  <badlop@ono.com>

	* src/mod_ctlextra.erl: Now vcard-get and vcard-set are more compatible with mod_vcard_odbc and mod_vcard_ldap.

2007-08-16  Badlop  <badlop@ono.com>

	* src/mod_ctlextra.erl: add-rosteritem only adds an item in a roster.

2007-08-07  Badlop  <badlop@ono.com>

	* src/mod_ctlextra.erl: Fixed indentation.

	* ChangeLog: New file to track changes.

	* README.txt: Removed Changelog section.