@@ -1,3 +1,7 @@
+2007-08-23  Badlop  <badlop@ono.com>
+
+	* src/mod_ctlextra.erl: Command add-rosteritem now pushes the roster item to the client. New command rem-rosteritem.
+
 2007-08-19  Badlop  <badlop@ono.com>
 
 	* src/mod_ctlextra.erl: Now vcard-get and vcard-set are more compatible with mod_vcard_odbc and mod_vcard_ldap.
